corrected the imports for code mirror

--- a/index.html
+++ b/index.html
@@ -6,12 +6,66 @@
 <link rel="icon" type="image/x-icon" href="img/ultradev.png">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <script type="text/javascript" src="./lib/stopwatch.js"></script>
 <script src="app/app-constants.js"></script>
 <!-- tag  ends-->
+<link rel="stylesheet" href="./codemirror/docs.css">
+<link rel="stylesheet" href="./codemirror/codemirror.css">
+<link rel="stylesheet" href="./codemirror/3024-day.css">
+<link rel="stylesheet" href="./codemirror/3024-night.css">
 <link rel="stylesheet" href="./codemirror/abcdef.css">
-
+<link rel="stylesheet" href="./codemirror/ambiance.css">
+<link rel="stylesheet" href="./codemirror/base16-dark.css">
+<link rel="stylesheet" href="./codemirror/bespin.css">
+<link rel="stylesheet" href="./codemirror/base16-light.css">
+<link rel="stylesheet" href="./codemirror/blackboard.css">
+<link rel="stylesheet" href="./codemirror/cobalt.css">
+<link rel="stylesheet" href="./codemirror/colorforth.css">
+<link rel="stylesheet" href="./codemirror/dracula.css">
+<link rel="stylesheet" href="./codemirror/duotone-dark.css">
+<link rel="stylesheet" href="./codemirror/duotone-light.css">
+<link rel="stylesheet" href="./codemirror/eclipse.css">
+<link rel="stylesheet" href="./codemirror/elegant.css">
+<link rel="stylesheet" href="./codemirror/erlang-dark.css">
+<link rel="stylesheet" href="./codemirror/gruvbox-dark.css">
+<link rel="stylesheet" href="./codemirror/hopscotch.css">
+<link rel="stylesheet" href="./codemirror/icecoder.css">
+<link rel="stylesheet" href="./codemirror/isotope.css">
+<link rel="stylesheet" href="./codemirror/lesser-dark.css">
+<link rel="stylesheet" href="./codemirror/liquibyte.css">
+<link rel="stylesheet" href="./codemirror/lucario.css">
+<link rel="stylesheet" href="./codemirror/material.css">
+<link rel="stylesheet" href="./codemirror/mbo.css">
+<link rel="stylesheet" href="./codemirror/mdn-like.css">
+<link rel="stylesheet" href="./codemirror/midnight.css">
+<link rel="stylesheet" href="./codemirror/monokai.css">
+<link rel="stylesheet" href="./codemirror/neat.css">
+<link rel="stylesheet" href="./codemirror/neo.css">
+<link rel="stylesheet" href="./codemirror/night.css">
+<link rel="stylesheet" href="./codemirror/oceanic-next.css">
+<link rel="stylesheet" href="./codemirror/panda-syntax.css">
+<link rel="stylesheet" href="./codemirror/paraiso-dark.css">
+<link rel="stylesheet" href="./codemirror/paraiso-light.css">
+<link rel="stylesheet" href="./codemirror/pastel-on-dark.css">
+<link rel="stylesheet" href="./codemirror/railscasts.css">
+<link rel="stylesheet" href="./codemirror/rubyblue.css">
+<link rel="stylesheet" href="./codemirror/seti.css">
+<link rel="stylesheet" href="./codemirror/shadowfox.css">
+<link rel="stylesheet" href="./codemirror/solarized.css">
+<link rel="stylesheet" href="./codemirror/the-matrix.css">
+<link rel="stylesheet" href="./codemirror/tomorrow-night-bright.css">
+<link rel="stylesheet" href="./codemirror/tomorrow-night-eighties.css">
+<link rel="stylesheet" href="./codemirror/ttcn.css">
+<link rel="stylesheet" href="./codemirror/twilight.css">
+<link rel="stylesheet" href="./codemirror/vibrant-ink.css">
+<link rel="stylesheet" href="./codemirror/xq-dark.css">
+<link rel="stylesheet" href="./codemirror/xq-light.css">
+<link rel="stylesheet" href="./codemirror/yeti.css">
+<link rel="stylesheet" href="./codemirror/idea.css">
+<link rel="stylesheet" href="./codemirror/darcula.css">
+<link rel="stylesheet" href="./codemirror/zenburn.css">
 <link href="datatable/dataTables.bootstrap4.min.css" rel="stylesheet">
 <link href="datatable/bootstrap.css" rel="stylesheet">
 <script type="text/javascript" src="./lib/codemirror.js"></script>
@@ -37,6 +91,94 @@
 <script type="text/javascript"
 	src="datatable/bs4/dataTables.buttons.min.js"></script>
 <script type="text/javascript" src="datatable/bs4/buttons.colVis.min.js"></script>
+
+<link rel="stylesheet" href="css/app.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<script type="text/javascript" src="./lib/stopwatch.js"></script>
+<script src="app/app-constants.js"></script>
+<!-- tag  ends-->
+<link rel="stylesheet" href="./codemirror/docs.css">
+<link rel="stylesheet" href="./codemirror/codemirror.css">
+<link rel="stylesheet" href="./codemirror/3024-day.css">
+<link rel="stylesheet" href="./codemirror/3024-night.css">
+<link rel="stylesheet" href="./codemirror/abcdef.css">
+<link rel="stylesheet" href="./codemirror/ambiance.css">
+<link rel="stylesheet" href="./codemirror/base16-dark.css">
+<link rel="stylesheet" href="./codemirror/bespin.css">
+<link rel="stylesheet" href="./codemirror/base16-light.css">
+<link rel="stylesheet" href="./codemirror/blackboard.css">
+<link rel="stylesheet" href="./codemirror/cobalt.css">
+<link rel="stylesheet" href="./codemirror/colorforth.css">
+<link rel="stylesheet" href="./codemirror/dracula.css">
+<link rel="stylesheet" href="./codemirror/duotone-dark.css">
+<link rel="stylesheet" href="./codemirror/duotone-light.css">
+<link rel="stylesheet" href="./codemirror/eclipse.css">
+<link rel="stylesheet" href="./codemirror/elegant.css">
+<link rel="stylesheet" href="./codemirror/erlang-dark.css">
+<link rel="stylesheet" href="./codemirror/gruvbox-dark.css">
+<link rel="stylesheet" href="./codemirror/hopscotch.css">
+<link rel="stylesheet" href="./codemirror/icecoder.css">
+<link rel="stylesheet" href="./codemirror/isotope.css">
+<link rel="stylesheet" href="./codemirror/lesser-dark.css">
+<link rel="stylesheet" href="./codemirror/liquibyte.css">
+<link rel="stylesheet" href="./codemirror/lucario.css">
+<link rel="stylesheet" href="./codemirror/material.css">
+<link rel="stylesheet" href="./codemirror/mbo.css">
+<link rel="stylesheet" href="./codemirror/mdn-like.css">
+<link rel="stylesheet" href="./codemirror/midnight.css">
+<link rel="stylesheet" href="./codemirror/monokai.css">
+<link rel="stylesheet" href="./codemirror/neat.css">
+<link rel="stylesheet" href="./codemirror/neo.css">
+<link rel="stylesheet" href="./codemirror/night.css">
+<link rel="stylesheet" href="./codemirror/oceanic-next.css">
+<link rel="stylesheet" href="./codemirror/panda-syntax.css">
+<link rel="stylesheet" href="./codemirror/paraiso-dark.css">
+<link rel="stylesheet" href="./codemirror/paraiso-light.css">
+<link rel="stylesheet" href="./codemirror/pastel-on-dark.css">
+<link rel="stylesheet" href="./codemirror/railscasts.css">
+<link rel="stylesheet" href="./codemirror/rubyblue.css">
+<link rel="stylesheet" href="./codemirror/seti.css">
+<link rel="stylesheet" href="./codemirror/shadowfox.css">
+<link rel="stylesheet" href="./codemirror/solarized.css">
+<link rel="stylesheet" href="./codemirror/the-matrix.css">
+<link rel="stylesheet" href="./codemirror/tomorrow-night-bright.css">
+<link rel="stylesheet" href="./codemirror/tomorrow-night-eighties.css">
+<link rel="stylesheet" href="./codemirror/ttcn.css">
+<link rel="stylesheet" href="./codemirror/twilight.css">
+<link rel="stylesheet" href="./codemirror/vibrant-ink.css">
+<link rel="stylesheet" href="./codemirror/xq-dark.css">
+<link rel="stylesheet" href="./codemirror/xq-light.css">
+<link rel="stylesheet" href="./codemirror/yeti.css">
+<link rel="stylesheet" href="./codemirror/idea.css">
+<link rel="stylesheet" href="./codemirror/darcula.css">
+<link rel="stylesheet" href="./codemirror/zenburn.css">
+<link href="datatable/dataTables.bootstrap4.min.css" rel="stylesheet">
+<link href="datatable/bootstrap.css" rel="stylesheet">
+<script type="text/javascript" src="./lib/codemirror.js"></script>
+<script type="text/javascript" src="./lib/autorefresh.js"></script>
+<script type="text/javascript" src="./lib/javascript.js"></script>
+<script type="text/javascript" src="./lib/common-util.js"></script>
+<link rel="stylesheet" href="bs-4/bootstrap.min.css">
+<script src="bs-4/jquery.min.js"></script>
+<script src="bs-4/popper.min.js"></script>
+<script src="bs-4/bootstrap.min.js"></script>
+<script type="text/javascript" src="datatable/jquery.dataTables.min.js"></script>
+<script type="text/javascript"
+	src="datatable/dataTables.bootstrap4.min.js"></script>
+<script type="text/javascript"
+	src="datatable/bs4/dataTables.buttons.min.js"></script>
+<script type="text/javascript"
+	src="datatable/bs4/buttons.bootstrap4.min.js"></script>
+<script type="text/javascript" src="datatable/bs4/jszip.min.js"></script>
+<script type="text/javascript" src="datatable/bs4/pdfmake.min.js"></script>
+<script type="text/javascript" src="datatable/bs4/vfs_fonts.js"></script>
+<script type="text/javascript" src="datatable/bs4/buttons.html5.min.js"></script>
+<script type="text/javascript" src="datatable/bs4/buttons.print.min.js"></script>
+<script type="text/javascript"
+	src="datatable/bs4/dataTables.buttons.min.js"></script>
+<script type="text/javascript" src="datatable/bs4/buttons.colVis.min.js"></script>
+
 <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
@@ -63,6 +205,11 @@
 				</div>
 			
 		</div>
+	</div>
+	<div>
+	<!-- 
+	for code mirror testing
+	<textarea rows="" cols=""  id="result"></textarea> -->
 	</div>
 	<div id='_notification'></div>
 	</div>
